Move NotFound error to service rather than controller
